dataset1235/2025-2/1153765216/users/260676580/executions/3138746197_291286518.log
== RUN (2025-08-14 19:47:20)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero; "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero;
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero;
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero;
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero;
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero;
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:02:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero; "))

# Impressao do dobro do numero
print(2*num)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero; 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero; 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero; 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero; 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero; 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:39:30)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite o numero; "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:24:07)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite o numero; ")))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero;
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero;
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero;
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero;
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero;
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:25:21)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite o numero; "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite o numero; "))
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
